# xpsupport-sys

./: .gitignore  Cargo.toml  ReadMe.md  build.rs  download_src.py
src/: lib.rs
test/: barrier.rs  condvar.rs  mod.rs  mutex.rs  once.rs  rwlock.rs
test/mpsc/: ReadMe.txt  mod.rs  mpsc_queue.rs  select.rs  spsc_queue.rs
test/mpsc_test/: blocking.rs  main.rs  mpsc_queue.rs  oneshot.rs  select.rs  shared.rs  spsc_queue.rs  stream.rs  sync.rs
