[package]
name = "xpsupport-sys"
version = "0.1.1"
authors = ["lynnux <lynnux@qq.com>"]
keywords = ["xp", "xpsupport", "RWLock", "Condvar", "windows"]
license = "MIT"
description = "Using a hack way to support xp, only need to link one dll. More details please visit repository."
repository = "https://github.com/lynnux/xpsupport"
exclude = [
    "test/*",
]

[dependencies]
xpsupport = "0.2"

[dev-dependencies]
rand = "0.7"

[[test]]
name = "test"
path = "test/mod.rs"
